--- a/ruoyi-common/ruoyi-common-bom/pom.xml
+++ b/ruoyi-common/ruoyi-common-bom/pom.xml
@@ -14,7 +14,7 @@
     </description>
 
     <properties>
-        <revision>5.5.1</revision>
+        <revision>0.5-beta</revision>
     </properties>
 
     <dependencyManagement>
