feat: 支持父子文档分块 (Parent-Child Chunking) 及 CI/CD 流水线
1. feat: 核心模块增加父子文档分块机制
   - 新增 `ChildChunkSplitter` 和相关的配置服务 `KmChunkingConfigService`。
   - 更新数据库结构 (V1.1.0__parent_child_chunking.sql)。
   - 增强了 `GenericFileEtlHandler`、`OnlineDocEtlHandler`、`WebLinkEtlHandler` 以适配新的分块段落生成。
   - 调整了 `KmDocumentChunk`、`KmDataset` 与 `KmEmbedding` 数据结构的定义和 Mapper。

2. feat(ci): 增加后端自动化部署流水线 (GitHub Actions)
   - 创建 `.github/backend-deploy.yml` 自动化工作流。
   - 支持经由阿里云容器镜像库打包 standalone Docker 镜像。
   - 配置目标 Ubuntu 服务器的增量 Jar 包 (附带 lib) SCP 回传与重启。

3. refactor & fix: 代码优化与重构
   - 修改 `KmEmbeddingServiceImpl` 相关的逻辑优化。
   - 更新了若干系统的 `application.yml` 示例及应用模板控制器。

--- a/ruoyi-admin/src/main/resources/application-sample.yml
+++ b/ruoyi-admin/src/main/resources/application-sample.yml
@@ -16,11 +16,6 @@ logging:
     dev.langchain4j: DEBUG
     org.dromara.ai: DEBUG
 
-
---- # AI配置
-ai:
-  log-chat: true
-
 --- # snail-job 配置
 snail-job:
   enabled: false
@@ -299,4 +294,13 @@ ai:
     model-path: F:\reranker\model.onnx
     # Tokenizer 文件路径
     tokenizer-path: F:\reranker\tokenizer.json
+  # 记录log for AI
+  log-chat: true
 
+--- # 知识库分块配置
+km:
+  chunking:
+    # 子块大小（字符数），默认 200。可被数据集级别配置覆盖
+    child-chunk-size: 200
+    # 子块重叠大小（字符数），默认 20。可被数据集级别配置覆盖
+    child-chunk-overlap: 20
