--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -13,8 +13,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 检出代码
+    - name: 检出后端代码
       uses: actions/checkout@v4
+      with:
+        path: kmatrix-service
+
+    - name: 检出前端代码
+      uses: actions/checkout@v4
+      with:
+        repository: mahoneliu/Kmatrix-ui
+        path: kmatrix-ui
 
     - name: 配置 JDK 17
       uses: actions/setup-java@v4
@@ -25,6 +33,23 @@ jobs:
 
     - name: Maven 编译打包
       run: mvn clean package -DskipTests
+      working-directory: ./kmatrix-service
+
+    - name: 配置 Node 环境及 pnpm
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+
+    - name: 安装 pnpm
+      uses: pnpm/action-setup@v3
+      with:
+        version: 9
+
+    - name: 前端安装依赖并构建
+      run: |
+        pnpm install
+        pnpm run build
+      working-directory: ./kmatrix-ui
 
     - name: 登录阿里云 Docker Registry
       uses: docker/login-action@v3
@@ -54,11 +79,10 @@ jobs:
         username: ${{ secrets.UBUNTU_USERNAME }}
         password: ${{ secrets.UBUNTU_PASSWORD }}
         port: ${{ secrets.UBUNTU_PORT || '22' }}
-        # 根据我们项目的实际打包位置配置
-        source: "ruoyi-admin/target/ruoyi-admin.jar,ruoyi-admin/target/lib/*"
+        source: "kmatrix-service/ruoyi-admin/target/ruoyi-admin.jar,kmatrix-service/ruoyi-admin/target/lib/*"
         target: "${{ secrets.UBUNTU_TARGET_DIR }}"
-        # 剥离多余的前半部分目录层级
-        strip_components: 2
+        # 剥离 kmatrix-service/ruoyi-admin/target 这一共 3 层结构
+        strip_components: 3
 
     - name: SSH 连接到 Ubuntu 并执行重启命令
       uses: appleboy/ssh-action@v1.0.3
