--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -66,7 +66,7 @@ jobs:
         LATEST_IMAGE="registry.cn-guangzhou.aliyuncs.com/kyxxjs/kmatrix:latest"
         
         # 编译构建 standalone 镜像
-        docker build -t $TARGET_IMAGE -t $LATEST_IMAGE -f docker/Dockerfile.standalone .
+        docker build -t $TARGET_IMAGE -t $LATEST_IMAGE -f kmatrix-service/docker/Dockerfile.standalone .
         
         # 推送镜像到阿里云
         docker push $TARGET_IMAGE
