--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -18,12 +18,6 @@ jobs:
       with:
         path: kmatrix-service
 
-    - name: 检出前端代码
-      uses: actions/checkout@v4
-      with:
-        repository: mahoneliu/Kmatrix-ui
-        path: kmatrix-ui
-
     - name: 配置 JDK 17
       uses: actions/setup-java@v4
       with:
@@ -34,6 +28,54 @@ jobs:
     - name: Maven 编译打包
       run: mvn clean package -DskipTests
       working-directory: ./kmatrix-service
+
+    - name: 预清理旧的服务程序文件 (使用 sudo 防止权限问题)
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.UBUNTU_HOST }}
+        username: ${{ secrets.UBUNTU_USERNAME }}
+        password: ${{ secrets.UBUNTU_PASSWORD }}
+        port: ${{ secrets.UBUNTU_PORT || '22' }}
+        script: |
+          cd ${{ secrets.UBUNTU_TARGET_DIR }}
+          # 强制清理被 root 用户创建的老旧文件，避免 SCP 传输时报 Cannot open (File exists)
+          sudo rm -rf ruoyi-admin.jar lib/*
+
+    - name: 准备目标服务器运行环境 (上传 Jar 文件)
+      uses: appleboy/scp-action@v0.1.4
+      with:
+        host: ${{ secrets.UBUNTU_HOST }}
+        username: ${{ secrets.UBUNTU_USERNAME }}
+        password: ${{ secrets.UBUNTU_PASSWORD }}
+        port: ${{ secrets.UBUNTU_PORT || '22' }}
+        source: "kmatrix-service/ruoyi-admin/target/ruoyi-admin.jar,kmatrix-service/ruoyi-admin/target/lib/*"
+        target: "${{ secrets.UBUNTU_TARGET_DIR }}"
+        # 剥离 kmatrix-service/ruoyi-admin/target 这一共 3 层结构
+        strip_components: 3
+        # 强制覆盖已有文件
+        overwrite: true
+
+    - name: SSH 连接到 Ubuntu 并执行重启命令
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.UBUNTU_HOST }}
+        username: ${{ secrets.UBUNTU_USERNAME }}
+        password: ${{ secrets.UBUNTU_PASSWORD }}
+        port: ${{ secrets.UBUNTU_PORT || '22' }}
+        script: |
+          # 进入目标部署目录
+          cd ${{ secrets.UBUNTU_TARGET_DIR }}
+          
+          echo "执行重启命令..."
+          bash sudo start.sh restart
+          
+          echo "部署命令执行完毕！"
+
+    - name: 检出前端代码
+      uses: actions/checkout@v4
+      with:
+        repository: mahoneliu/Kmatrix-ui
+        path: kmatrix-ui
 
     - name: 配置 Node 环境及 pnpm
       uses: actions/setup-node@v4
@@ -71,33 +113,3 @@ jobs:
         # 推送镜像到阿里云
         docker push $TARGET_IMAGE
         docker push $LATEST_IMAGE
-
-    - name: 准备目标服务器运行环境 (上传 Jar 文件)
-      uses: appleboy/scp-action@v0.1.4
-      with:
-        host: ${{ secrets.UBUNTU_HOST }}
-        username: ${{ secrets.UBUNTU_USERNAME }}
-        password: ${{ secrets.UBUNTU_PASSWORD }}
-        port: ${{ secrets.UBUNTU_PORT || '22' }}
-        source: "kmatrix-service/ruoyi-admin/target/ruoyi-admin.jar,kmatrix-service/ruoyi-admin/target/lib/*"
-        target: "${{ secrets.UBUNTU_TARGET_DIR }}"
-        # 剥离 kmatrix-service/ruoyi-admin/target 这一共 3 层结构
-        strip_components: 3
-        # 强制覆盖已有文件，解决 tar: Cannot open: File exists 问题
-        overwrite: true
-
-    - name: SSH 连接到 Ubuntu 并执行重启命令
-      uses: appleboy/ssh-action@v1.0.3
-      with:
-        host: ${{ secrets.UBUNTU_HOST }}
-        username: ${{ secrets.UBUNTU_USERNAME }}
-        password: ${{ secrets.UBUNTU_PASSWORD }}
-        port: ${{ secrets.UBUNTU_PORT || '22' }}
-        script: |
-          # 进入目标部署目录
-          cd ${{ secrets.UBUNTU_TARGET_DIR }}
-          
-          echo "执行重启命令..."
-          bash sudo start.sh restart
-          
-          echo "部署命令执行完毕！"
